Changes to be committed: 	new file:   .yarn/install-state.gz 	modified:   astro.config.mjs 	modified:   package-lock.json 	modified:   package.json 	new file:   src/assets/img/mapa.png 	new file:   src/components/BackToTop.astro 	modified:   src/components/Footer.astro 	new file:   src/components/Map.astro 	modified:   src/components/PamatkyGridSingle.astro 	modified:   src/layouts/Layout.astro 	modified:   src/pages/index.astro 	new file:   yarn.lock

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -39,26 +39,66 @@ import alpinejsIcon from "../assets/svg/alpinejsIcon.svg";
       </p>
       <div class="inline-flex space-x-1 justify-center items-center">
         <a aria-label="Astro" href="https://astro.build" target="_blank"
-          ><img aria-hidden="true" class="h-6" src={astroIcon} alt="Astro" />
+          ><svg
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            width="1em"
+            height="1.5rem"
+            preserveAspectRatio="xMidYMid meet"
+            viewBox="0 0 32 32"
+            style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);"
+            ><path
+              fill="#ff5d01"
+              fill-rule="evenodd"
+              d="M5.9 18.847a7.507 7.507 0 0 0-.572 2.624a3.265 3.265 0 0 0 .551 1.553a7.427 7.427 0 0 0 2.093 1.681l5.128 3.414a7.332 7.332 0 0 0 2.1 1.168a3.239 3.239 0 0 0 1.5 0a7.381 7.381 0 0 0 2.117-1.16L24 24.711a7.512 7.512 0 0 0 2.117-1.688a3.241 3.241 0 0 0 .55-1.563a7.515 7.515 0 0 0-.587-2.643L21.547 4.551a3.973 3.973 0 0 0-.54-1.3a1.733 1.733 0 0 0-.7-.51a3.972 3.972 0 0 0-1.4-.122h-5.902a3.932 3.932 0 0 0-1.4.125a1.713 1.713 0 0 0-.7.512a3.94 3.94 0 0 0-.535 1.3L5.9 18.848Zm13.24-13.2a3.329 3.329 0 0 1 .441 1.093l3.892 12.784a16.168 16.168 0 0 0-4.653-1.573l-2.529-8.56a.331.331 0 0 0-.513-.169a.323.323 0 0 0-.119.169l-2.5 8.557a16.14 16.14 0 0 0-4.674 1.579l3.908-12.784a3.281 3.281 0 0 1 .442-1.094a1.458 1.458 0 0 1 .582-.43a3.31 3.31 0 0 1 1.175-.1h2.793a3.314 3.314 0 0 1 1.176.1a1.454 1.454 0 0 1 .583.432ZM16.127 21.06a5.551 5.551 0 0 0 3.4-.923a2.8 2.8 0 0 1-.207 2.182a3.938 3.938 0 0 1-1.547 1.481c-.674.428-1.254.8-1.254 1.787a2.079 2.079 0 0 0 .209.914a2.49 2.49 0 0 1-1.535-2.3v-.061c0-.683 0-1.524-.962-1.524a1.028 1.028 0 0 0-.391.077a1.021 1.021 0 0 0-.552.551a1.03 1.03 0 0 0-.079.391a3.769 3.769 0 0 1-.988-2.644a4.206 4.206 0 0 1 .175-1.248c.4.757 1.92 1.32 3.731 1.32Z"
+            ></path>
+          </svg>
         </a>
         <a
           aria-label="Tailwind CSS"
           href="https://tailwindcss.com"
           target="_blank"
-          ><img
-            aria-hidden="true"
-            class="h-4"
-            src={tailwindIcon}
-            alt="TailwindCSS"
-          />
+          ><svg
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            width="1.67em"
+            height="1em"
+            preserveAspectRatio="xMidYMid meet"
+            viewBox="0 0 256 154"
+            style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);"
+            ><defs
+              ><linearGradient
+                id="IconifyId-18360f5d200-6a38c2-8503"
+                x1="-2.778%"
+                x2="100%"
+                y1="32%"
+                y2="67.556%"
+                ><stop offset="0%" stop-color="#2298BD"></stop><stop
+                  offset="100%"
+                  stop-color="#0ED7B5"></stop>
+              </linearGradient>
+            </defs><path
+              fill="url(#IconifyId-18360f5d200-6a38c2-8503)"
+              d="M128 0C93.867 0 72.533 17.067 64 51.2C76.8 34.133 91.733 27.733 108.8 32c9.737 2.434 16.697 9.499 24.401 17.318C145.751 62.057 160.275 76.8 192 76.8c34.133 0 55.467-17.067 64-51.2c-12.8 17.067-27.733 23.467-44.8 19.2c-9.737-2.434-16.697-9.499-24.401-17.318C174.249 14.743 159.725 0 128 0ZM64 76.8C29.867 76.8 8.533 93.867 0 128c12.8-17.067 27.733-23.467 44.8-19.2c9.737 2.434 16.697 9.499 24.401 17.318C81.751 138.857 96.275 153.6 128 153.6c34.133 0 55.467-17.067 64-51.2c-12.8 17.067-27.733 23.467-44.8 19.2c-9.737-2.434-16.697-9.499-24.401-17.318C110.249 91.543 95.725 76.8 64 76.8Z"
+            ></path>
+          </svg>
         </a>
         <a aria-label="AlpineJS" href="https://alpinejs.dev" target="_blank"
-          ><img
-            aria-hidden="true"
-            class="h-4"
-            src={alpinejsIcon}
-            alt="Alpine JS"
-          />
+          ><svg
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            width="2.17em"
+            height="1em"
+            preserveAspectRatio="xMidYMid meet"
+            viewBox="0 0 256 118"
+            style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);"
+            ><path
+              fill="#77C1D2"
+              d="M199.111 0L256 56.639l-56.889 56.64l-56.889-56.64z"
+            ></path><path
+              fill="#2D3441"
+              d="m56.889 0l117.938 117.421H61.049L0 56.639z"></path>
+          </svg>
         </a>
       </div>
     </div>
