--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ export interface Props {
   description: string;
 }
 
+import BackToTop from "../components/BackToTop.astro";
 import BaseHead from "../components/BaseHead.astro";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
@@ -18,6 +19,7 @@ const { title, description } = Astro.props;
     class="min-h-full min-w-full bg-primary text-secondary flex flex-col flex-1 justify-between"
   >
     <Header />
+    <label id="top" class="invisible"></label>
     <main
       id="content"
       class="lg:p-16 p-3 flex-wrap flex justify-center items-center h-full w-full"
@@ -27,12 +29,14 @@ const { title, description } = Astro.props;
       </slot>
     </main>
     <Footer />
-    <!-- <script
+    <BackToTop />
+
+    <script
       defer
       src="https://unpkg.com/@alpinejs/persist@3.x.x/dist/cdn.min.js"
     ></script>
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"
-    ></script> -->
+    ></script>
 
     <style is:global>
       @import url("https://use.typekit.net/csa2fon.css");
