Optimised performace (no bg motion, no unnecessary JS), some minor UI/UX improvements

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ import alpinejsIcon from "../assets/svg/alpinejsIcon.svg";
 ---
 
 <footer
-  class="min-w-full max-h-fit bg-tertiary p-7 flex flex-wrap flex-row flex-auto justify-center text-xs text-slate-900"
+  class="min-w-full h-fit bg-tertiary p-7 flex flex-wrap flex-none flex-row justify-center text-xs text-slate-900"
 >
   <!-- <div id="sponsors" class="flex flex-wrap flex-col justify-center items-center space-y-4">
     <p class="font-bold">Sponzoři:</p>
@@ -43,7 +43,7 @@ import alpinejsIcon from "../assets/svg/alpinejsIcon.svg";
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
             width="1em"
-            height="1.5rem"
+            height="1em"
             preserveAspectRatio="xMidYMid meet"
             viewBox="0 0 32 32"
             style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);"
@@ -83,7 +83,7 @@ import alpinejsIcon from "../assets/svg/alpinejsIcon.svg";
             ></path>
           </svg>
         </a>
-        <a aria-label="AlpineJS" href="https://alpinejs.dev" target="_blank"
+        <!-- <a aria-label="AlpineJS" href="https://alpinejs.dev" target="_blank"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -99,7 +99,7 @@ import alpinejsIcon from "../assets/svg/alpinejsIcon.svg";
               fill="#2D3441"
               d="m56.889 0l117.938 117.421H61.049L0 56.639z"></path>
           </svg>
-        </a>
+        </a> -->
       </div>
     </div>
   </div>
