--- a/src/layouts/PamatkaSingleLayout.astro
+++ b/src/layouts/PamatkaSingleLayout.astro
@@ -62,6 +62,7 @@ const testImages = [""];
             alt={frontmatter.title}
             width={550}
             format={"webp"}
+            loading="lazy"
           />
         )
       }
