--- a/src/components/ImageGrid.astro
+++ b/src/components/ImageGrid.astro
@@ -27,6 +27,7 @@ const { images, imgAlt } = Astro.props;
         ease-in-out md:min-w-0`}
         format={"webp"}
         width={550}
+        loading="lazy"
       />
       </label>
 
@@ -39,6 +40,7 @@ const { images, imgAlt } = Astro.props;
         class={`rounded-md drop-shadow-md transition-all ease-in-out w-[90%] h-auto md:h-[95%] md:w-auto object-contain`}
         format={"webp"}
         width={1800}
+        loading="lazy"
       />
       </label>
     ))
