--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,14 +67,14 @@ const description =
       >
         30 LET SPOLU / Reg. č.: CZ.11.4.120/0.0/0.0/16_008/0003069
       </p>
-      <div class="flex flex-row flex-none justify-around mt-5">
+      <div class="flex flex-wrap xl:flex-row flex-none justify-around mt-5 space-x-5">
       <p class="text-2xl font-medium tracking-wide">
         Trasu najdete na:
         <br/>
         <a class="btn btn-accent w-full my-5" href="https://en.mapy.cz/s/lukonujuka" target="_blank">Mapy.cz</a>
       </p>
-      <div class="md:block self-end border-4 border-secondary w-fit">
-        <iframe style="border:none" src="https://en.frame.mapy.cz/s/mepepolevu" width="750" height="330" frameborder="0"></iframe>
+      <div class="hidden xl:block self-end border-4 border-secondary w-fit">
+        <iframe style="border:none" src="https://en.frame.mapy.cz/s/mepepolevu" width="750" height="330" frameborder="0" loading="lazy"></iframe>
       </div>
       </div>
     </section>
